cmake_minimum_required (VERSION 3.2)
project (EGame)
SET(PROJECT_NAME EGame)


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/../bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/../bin)

SET(PROJECT_LIB_DIR ${PROJECT_SOURCE_DIR}/../lib)

SET(PROJECT_LIBS ${PROJECT_LIB_DIR}/ECore.lib
                ${PROJECT_LIB_DIR}/EEngine.lib
                Winmm
                MSVCRT.lib
                )

include_directories(${PROJECT_SOURCE_DIR}/include 
    ${PROJECT_SOURCE_DIR}/../EEngine/include 
    ${PROJECT_SOURCE_DIR}/../ECore/include )

aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)

add_executable(${PROJECT_NAME} ${SRC_LIST})

target_link_libraries(${PROJECT_NAME} ${PROJECT_LIBS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS") #/ENTRY:mainCRTStartup
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS") #/ENTRY:mainCRTStartup